--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -15,11 +15,34 @@
 					<a class="nav-link active" href="{{path('app_ingredient')}}">Mes Ingredient
 					</a>
 				</li>
-        <li class="nav-item">
-          <a class="nav-link active" href="{{path('recettes.index')}}">Mes Recettes </a>
-        </li>
+				<li class="nav-item">
+					<a class="nav-link active" href="{{path('recettes.index')}}">Mes Recettes
+					</a>
+				</li>
 			</ul>
-		</div>
-	</div>
-</nav>
+			<div class="d-flex">
+				<ul class="navbar-nav me-auto">
 
+
+					{% if app.user %}
+						<li class="nav-item dropdown" style="margin-right: 5rem;">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{app.user.fullName}}</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="{{path('user_edit')}}">Modifier profile</a>
+								<a class="dropdown-item" href="{{path('user_change_password')}}">Modifier le mots de passe</a>
+								<a class="dropdown-item" href="{{path('app_logout')}}">Deconnexion</a>
+
+							</div>
+
+
+						</li>
+
+
+					{% else %}
+						<a href="{{path('app_login')}}" class="btn btn-secondary my-2 my-sm-0">Connexion</a>
+					{% endif %}
+
+				</div>
+			</div>
+		</div>
+	</nav>
