--- a/templates/pages/user/change_password.html.twig
+++ b/templates/pages/user/change_password.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Modifier votre mot de passe{% endblock %}
 
 {% block body %}
 
 <div class="container">
-<h2 class="mt-4">Modifier votre profil</h2>
+<h2 class="mt-4">Modifier votre mot de passe </h2>
 {% for message in app.flashes('success') %}
   
     <div class="alert alert-success">
