--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{path('app_home')}}">Navbar</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -8,9 +7,10 @@
 			<ul class="navbar-nav me-auto">
 				<li class="nav-item">
 					<a class="nav-link active" href="{{path('app_home')}}">Home
-						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
+				{% if app.user %}
+
 				<li class="nav-item">
 					<a class="nav-link active" href="{{path('app_ingredient')}}">Mes Ingredient
 					</a>
@@ -19,11 +19,17 @@
 					<a class="nav-link active" href="{{path('recettes.index')}}">Mes Recettes
 					</a>
 				</li>
+								{% endif %}
+
+				<li class="nav-item">
+					<a class="nav-link active" href="{{path('recettesPublic')}}">Recettes de communité
+					</a>
+				</li>
+
+
 			</ul>
 			<div class="d-flex">
 				<ul class="navbar-nav me-auto">
-
-
 					{% if app.user %}
 						<li class="nav-item dropdown" style="margin-right: 5rem;">
 							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{app.user.fullName}}</a>
@@ -34,9 +40,7 @@
 
 							</div>
 
-
 						</li>
-
 
 					{% else %}
 						<a href="{{path('app_login')}}" class="btn btn-secondary my-2 my-sm-0">Connexion</a>
