--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -34,9 +34,16 @@
 						<li class="nav-item dropdown" style="margin-right: 5rem;">
 							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{app.user.fullName}}</a>
 							<div class="dropdown-menu">
+					
+							{% if 'ROLE_ADMIN' in app.user.roles %}
+							<a class="dropdown-item" href="{{path('admin')}}">Dashboard</a>
+
+									{% endif %}
+								
 								<a class="dropdown-item" href="{{path('user_edit')}}">Modifier profile</a>
 								<a class="dropdown-item" href="{{path('user_change_password')}}">Modifier le mots de passe</a>
 								<a class="dropdown-item" href="{{path('app_logout')}}">Deconnexion</a>
+
 
 							</div>
 
